--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .title {
-  color: #000000;
+  color: #8c85f1;
   font-family: "Proxima Nova";
   font-size: 36px;
   font-weight: 400;
@@ -24,8 +24,9 @@ body {
 }
 
 .tools_item {
-  width: 25%;
-  min-height: 366px;
+  width: 100%;
+  min-height: 500px;
+  margin-bottom: 500px;
   flex-direction: column;
   display: flex;
   align-items: center;
@@ -33,8 +34,8 @@ body {
 }
 
 .tools_img {
-  width: 218px;
-  height: 210px;
+  width: 500px;
+  height: 300px;
 }
 
 .tools_name {
@@ -53,15 +54,17 @@ body {
 
 .tools_button {
   background-color: inherit;
-  border: 1px solid #23bac1;
-  color: #23bac1;
+  border: 1px solid #8c85f1;
+  color: #8c85f1;
   padding: 23px 74px;
-  text-transform: uppercase;
+  margin-bottom: 16px;
+  margin-top: 16px;
+  width: 440px;
   font-family: "Proxima Nova";
 }
 
 .tools_button:hover {
-  background-color: #23bac1;
+  background-color: #8c85f1;
   color: #ffffff;
   transition: 0.3s;
 }
